# fingerprint-gui

./: .editorconfig  .gitignore  .restyled.yaml  CHANGELOG  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  LICENSE.md  Lubuntu-Readme.txt  README.md  SECURITY.md  fingerprint-gui.code-workspace  fingerprint.pro  qmake.sh
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml
conf/pam/: fingerprint-gui.pam-config
conf/udev/: 91-fingerprint-gui-upek.rules  92-fingerprint-gui-uinput.rules
debian/: README.Debian  changelog  control  copyright  fingerprint-gui-dev.doc-base.hacking  fingerprint-gui-dev.doc-base.step  fingerprint-gui-dev.docs  fingerprint-gui.doc-base.de  fingerprint-gui.doc-base.en  fingerprint-gui.gsettings-override  fingerprint-gui.install  fingerprint-gui.menu  fingerprint-gui.postinst  fingerprint-gui.prerm  fingerprint-gui.udev  lintian-overrides  policykit-1-fingerprint-gui.install  rules  source.lintian-overrides  watch
debian/pam-configs/: fingerprint-gui
doc/: Manual_de.html  Manual_de.xml  Manual_en.html  Step-by-step-manual.html  make-html.sh
doc/fingerprint-gui/: Hacking.html  Hacking.xml  Manual_en.xml  Step-by-step-manual.xml  make-html.sh
include/: AboutImpl.h  AuthDialog.h  DeviceHandler.h  ExistDialogImpl.h  Fingercodes.h  Fingernames.h  Fingerprint.h  FingerprintData.h  FingerprintDevice.h  FingerprintDiscoverer.h  FingerprintHelper.h  Globals.h  GlobalsImg.h  IdentifierGUI.h  MainWindowImpl.h  MessageDialogImpl.h  PamGUI.h  PamNonGUI.h  PamTester.h  PluginDialog.h  PolkitDialogImpl.h  PolkitListener.h  SavedDialogImpl.h  UsbDevice.h  UserSettings.h  i18nHelper.h  xmlwriter.h
locales/: CMakeLists.txt  en_US.ts
man/: Makefile  fingerprint-gui.1  fingerprint-identifier.1  pam_fingerprint-gui.8
man/src/: fingerprint-gui.xml  fingerprint-identifier.xml  pam_fingerprint-gui.xml
src/: About-res.qrc  About.ui  AboutImpl.cpp  CMakeLists.txt  DeviceHandler.cpp  ExistDialog.ui  ExistDialogImpl.cpp  Fingerprint.cpp  FingerprintData.cpp  FingerprintDiscoverer.cpp  FingerprintGUI.cpp  FingerprintGUI.ui  FingerprintHelper.cpp  FingerprintIdentifier.cpp  FingerprintIdentifier.ui  FingerprintPAM.cpp  FingerprintPlugin.cpp  FingerprintPlugin.ui  FingerprintPolkit.cpp  FingerprintRw.cpp  GUI-res.qrc  GlobalsImg.cpp  IdentifierGUI.cpp  MainWindowImpl.cpp  Message.ui  MessageDialogImpl.cpp  PamGUI.cpp  PamNonGUI.cpp  PamTester.cpp  PluginDialog.cpp  PolkitDetails.ui  PolkitDialog.ui  PolkitDialogImpl.cpp  PolkitListener.cpp  SavedDialog.ui  SavedDialogImpl.cpp  UsbDevice.cpp  UserSettings.cpp  widget-res.qrc  xmlwriter.cpp
src/drivers/: GenericDevice.cpp  GenericDevice.h  UpekDevice.cpp  UpekDevice.h
src/res/: CMakeLists.txt  fingerprint-gui.xpm
upek/: 91-fingerprint-gui-upek.rules  CMakeLists.txt  upek.cfg
upek/include/: bsapi.h  bserror.h  bstypes.h
upek/lib/: libbsapi.so.4.0
